normalized 爲 (Taisho) to 為 (CBETA)

--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -22,7 +22,7 @@ next: ../02/EA_02_01.html
     <li class='ch'>自歸能仁、第七仙，<br/>
     演説賢聖無上軌。<br/>
     永在生死長流河，<br/>
-    世尊今爲度㴝庶。</li>
+    世尊今為度㴝庶。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>Devotion to Śākyamuni, the seventh sage,<br/>
@@ -147,7 +147,7 @@ next: ../02/EA_02_01.html
   <td title='T125.2.549c2'><ul class='verse'>
     <li class='ch'>今尊迦葉能堪任<br/>
     世雄以法付耆舊。<br/>
-    大迦葉，今爲眾人，<br/>
+    大迦葉，今為眾人，<br/>
     如來在世；請半坐</li>
   </ul></td>
   <td><ul class='verse'>
@@ -216,8 +216,8 @@ next: ../02/EA_02_01.html
 <tr>
   <td title='T125.2.549c12'><ul class='verse'>
     <li class='ch'>若使不欲法存者，<br/>
-    便爲壞敗如來教。<br/>
-    願存本要爲眾生<br/>
+    便為壞敗如來教。<br/>
+    願存本要為眾生<br/>
     得濟危厄、度眾難。</li>
   </ul></td>
   <td><ul class='verse'>
@@ -300,9 +300,9 @@ next: ../02/EA_02_01.html
 <tr>
   <td title='T125.2.549c24'><ul class='verse'>
     <li class='ch'>時阿難説經無量。<br/>
-    「誰能備具爲一聚？<br/>
-    我今當爲作三分，<br/>
-    造立十經爲一偈。</li>
+    「誰能備具為一聚？<br/>
+    我今當為作三分，<br/>
+    造立十經為一偈。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>Ānanda then recited <em>sūtra</em>s without measure.<br/>
@@ -316,7 +316,7 @@ next: ../02/EA_02_01.html
     <li class='ch'>「契經一分，律二分，<br/>
     阿毘曇經復三分，<br/>
     過去三佛皆三分：<br/>
-    契經律法爲三藏。</li>
+    契經律法為三藏。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>“The <em>sūtra</em>s make one part, the Vinaya the second,<br/>
@@ -330,7 +330,7 @@ next: ../02/EA_02_01.html
     <li class='ch'>「契經今當分四段：<br/>
     次名増一，二名中，<br/>
     三名曰長，多瓔珞，<br/>
-    雜經在後，爲四分。」</li>
+    雜經在後，為四分。」</li>
   </ul></td>
   <td><ul class='verse'>
     <li>“Now, I’ll divide the <em>sūtra</em>s into four sections:<br/>
@@ -554,7 +554,7 @@ next: ../02/EA_02_01.html
     <li class='ch'>四部之眾發道意，<br/>
     及諸一切眾生類，<br/>
     彼有牢信不狐疑，<br/>
-    集此諸法爲一分。</li>
+    集此諸法為一分。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>The fourfold assembly who’d set out for awakening<sup id="ref14"><a href="#n14">14</a></sup><br/>
@@ -762,7 +762,7 @@ next: ../02/EA_02_01.html
 <tr>
   <td title='T125.2.550c3'><ul class='verse'>
     <li class='ch'>其有專心持増一，<br/>
-    便爲總持如來藏。<br/>
+    便為總持如來藏。<br/>
     正使今身不盡結，<br/>
     後生便得高才智。</li>
   </ul></td>
@@ -804,9 +804,9 @@ next: ../02/EA_02_01.html
 <tr>
   <td title='T125.2.550c9'><ul class='verse'>
     <li class='ch'>契經一藏，律二藏，<br/>
-    阿毘曇經爲三藏。<br/>
+    阿毘曇經為三藏。<br/>
     方等大乘義玄邃<br/>
-    及諸契經爲雜藏。</li>
+    及諸契經為雜藏。</li>
   </ul></td>
   <td><ul class='verse'>
     <li><em>Sūtra</em>s are one <em>piṭaka</em>, Vinaya is a second <em>piṭaka</em>,<br/>
@@ -860,7 +860,7 @@ next: ../02/EA_02_01.html
     <td>When he said this, the gods, worldly people, <em>gandharva</em>s, <em>asura</em>s, <em>garuḍa</em>s, <em>mahoraga</em>s, and <em>kiṃnara</em>s all said, “We will protect all these good men and good women who recite and retain the honored <cite>Ekottarika</cite> teaching and disseminate it widely so that it will never come to an end.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.550c29'>時，尊者阿難告優多羅曰： 「我今以此増一阿含囑累於汝。 善諷、誦、讀；莫令漏、減。 所以者何？ 其有輕慢此尊經者便爲墮落、爲凡夫行。 何以故？ 此，優多羅，増一阿含出三十七道品之教及諸法皆由此生。」</td>
+    <td class='ch' title='T125.2.550c29'>時，尊者阿難告優多羅曰： 「我今以此増一阿含囑累於汝。 善諷、誦、讀；莫令漏、減。 所以者何？ 其有輕慢此尊經者便為墮落、為凡夫行。 何以故？ 此，優多羅，増一阿含出三十七道品之教及諸法皆由此生。」</td>
     <td>The Venerable Ānanda then told Uttara, “Now, I entrust this <cite>Ekottarika Āgama</cite> with you. Chant, recite, and read it well; don’t let it be corrupted or reduced. Why is that? Those who take this honored scripture lightly will fall back and behave like ordinary people. And why? Uttara, this <cite>Ekottarika Āgama</cite> produces the teachings of the thirty-seven factors of the path and all the things that arise from them.”</td>
   </tr>
   <tr>
@@ -938,7 +938,7 @@ next: ../02/EA_02_01.html
     <td>“Kāśyapa, you should know that Śākyamuni is now the Tathāgata, Arhat, and Completely Awakened One who has appeared in the world, and this monk is now named Uttara. Although the Buddha Śākyamuni has <em>parinirvāṇa</em>-ed, the monk Ānanda is still in the world. The Bhagavān had entrusted me with all his teachings, and now I’ve also entrusted it with Uttara. Why is that? I examined him as a vessel and investigated his past. Afterward, I entrusted the teachings to him. And why?</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.551b26'>「過去時於此賢劫中，拘留孫如來、至真、等正覺、明行成、爲善逝、世間解、無上士、道法御、天人師，號佛、眾祐，出現於世。 爾時，有王名摩訶提婆以法治化，未曾阿曲。 壽命極長，端正無雙、世之希有。 八萬四千歳中，於童子身而自遊戯。 八萬四千歳中，以太子身以法治化。 八萬四千歳中，復以王法治化天下。</td>
+    <td class='ch' title='T125.2.551b26'>「過去時於此賢劫中，拘留孫如來、至真、等正覺、明行成、為善逝、世間解、無上士、道法御、天人師，號佛、眾祐，出現於世。 爾時，有王名摩訶提婆以法治化，未曾阿曲。 壽命極長，端正無雙、世之希有。 八萬四千歳中，於童子身而自遊戯。 八萬四千歳中，以太子身以法治化。 八萬四千歳中，復以王法治化天下。</td>
     <td>“In the past during this fortunate eon, Krakucchanda the Tathāgata, Arhat, and Completely Awakened One appeared in the world who was One Accomplished in Insight and Conduct, a Well Gone One, Understander of the World, an Unsurpassed Worthy, a Trainer in the Dharma Path, a Teacher to Gods and Humans, and called a Buddha and Bhagavān. At the time, there was a king name *Makhādeva<sup id="ref23"><a href="#n23">23</a></sup> who ruled according to the Dharma and was never crooked. He lived for a very long time, and his uprightness was peerless and rare in the world. For 84,000 years, he entertained himself as a youth. For 84,000 years, he governed according to the Dharma as a prince. For 84,000 years, he also ruled according to the Dharma as the king of the world.</td>
   </tr>
   <tr>
@@ -946,7 +946,7 @@ next: ../02/EA_02_01.html
     <td>“Kāśyapa, you should know that once the Bhagavān had traveled to the Mango Park.<sup id="ref24"><a href="#n24">24</a></sup> After eating, he paced back and forth in the yard as usual with myself and an attendant. The Bhagavān then smiled and a rainbow issued from his mouth.<sup id="ref25"><a href="#n25">25</a></sup> When I saw that, I knelt and said to the Bhagavān, ‘The Buddha doesn’t smile for no reason. Please let me hear the beginning and end of it, for the Tathāgata, Arhat, and Completely Awakened One never smiles for no reason.’</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.551c8'>「爾時，迦葉，佛告我言： 『過去世時於此賢劫中，有如來名拘留孫至真、等正覺出現於世。 復於此處爲諸弟子而廣説法。</td>
+    <td class='ch' title='T125.2.551c8'>「爾時，迦葉，佛告我言： 『過去世時於此賢劫中，有如來名拘留孫至真、等正覺出現於世。 復於此處為諸弟子而廣説法。</td>
     <td>“Kāśyapa, the Buddha then told me, ‘Once in the past during this fortunate eon, a Tathāgata named Krakucchanda the Arhat and Completely Awakened One appeared in the world. It was right here that he taught the Dharma to his disciples in detail.</td>
   </tr>
   <tr>
@@ -958,7 +958,7 @@ next: ../02/EA_02_01.html
     <td>“‘Furthermore, during this fortunate eon, there was also Kāśyapa the Tathāgata, Arhat, and Completely Awakened One who appeared in the world. It was also right here that that Tathāgata Kāśyapa taught the Dharma to his disciples in detail.’</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.551c15'>「爾時，迦葉，我於佛前長跪白佛言： 『願令後釋迦文佛亦於此處與諸弟子具足説法。 此處便爲四如來金剛之座。 恒不斷絶！』</td>
+    <td class='ch' title='T125.2.551c15'>「爾時，迦葉，我於佛前長跪白佛言： 『願令後釋迦文佛亦於此處與諸弟子具足説法。 此處便為四如來金剛之座。 恒不斷絶！』</td>
     <td>“Kāśyapa, I knelt in front of the Buddha and said to him, ‘Please let it be right here as well that the Buddha Śākyamuni teaches the Dharma to his disciples in full. This place would then be the diamond seat of four Tathāgatas. The Dharma will never come to an end!’</td>
   </tr>
   <tr>
@@ -1000,7 +1000,7 @@ next: ../02/EA_02_01.html
     <td class="blockquote">“Now, I’ve enjoyed the fortunes that are among humans,<sup id="ref27"><a href="#n27">27</a></sup> but I must apply myself to the virtues that ascend to Heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.552a4'>「『爾時，王摩訶提婆便告第一太子名曰長壽： 「卿今知，不？ 吾首已生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，便爲凡夫之行。 凡夫者長處三塗、八難之中。」</td>
+    <td class='ch' title='T125.2.552a4'>「『爾時，王摩訶提婆便告第一太子名曰長壽： 「卿今知，不？ 吾首已生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，便為凡夫之行。 凡夫者長處三塗、八難之中。」</td>
     <td class="blockquote">King *Makhādeva then told his first prince, who was named *Dīrghāyu: “Did you know? White hair has grown on my head. I’ve decided to cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain. You will succeed to my throne and rule with the Dharma. Don’t let anything be forgotten, my instructions be contradicted, or anyone return to the behavior of ordinary people. Why is that? If people contradict my words, then they’ll behave like ordinary people. Ordinary people spend a long time on the three muddy roads dealing with the eight difficulties.”<sup id="ref28"><a href="#n28">28</a></sup></td>
   </tr>
   <tr>
@@ -1034,7 +1034,7 @@ next: ../02/EA_02_01.html
     <td class="blockquote">“Now, I’ve enjoyed the fortunes that are among humans, but I must apply myself to the virtues that ascend to Heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.553c9'>「『時，長壽王告第一太子善觀曰： 「卿今知，不？ 吾已首上生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，爲凡夫之行。 夫凡夫者長處三塗、八難之中。」</td>
+    <td class='ch' title='T125.2.553c9'>「『時，長壽王告第一太子善觀曰： 「卿今知，不？ 吾已首上生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，為凡夫之行。 夫凡夫者長處三塗、八難之中。」</td>
     <td class="blockquote">King *Dīrghāyu then told his first prince, who was named *Sudarśana:<sup id="ref30"><a href="#n30">30</a></sup> “Did you know? White hair has grown on my head. I’ve decided to cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain. You will succeed to my throne and rule with the Dharma. Don’t let anything be forgotten, my instructions be contradicted, or anyone return to the behavior of ordinary people. Why is that? If people contradict my words, then they’ll behave like ordinary people. Ordinary people spend a long time on the three muddy roads dealing with the eight difficulties.”</td>
   </tr>
   <tr>
