--- a/01_agama/ekottarika/03/EA_03_01.md
+++ b/01_agama/ekottarika/03/EA_03_01.md
@@ -18,19 +18,19 @@ next: EA_03_02.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554a8'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 已修行一法，便有名譽，成大果報、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念佛。」</td>
+    <td class='ch' title='T125.2.554a8'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 已修行一法，便有名譽，成大果報、諸善普至。 得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念佛。」</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.<sup id="ref2"><a href="#n2">2</a></sup> They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the Buddha.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554a12'>佛告諸比丘： 「云何修行念佛便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td class='ch' title='T125.2.554a12'>佛告諸比丘： 「云何修行念佛便有名譽，成大果報、諸善普至，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
     <td id='p3'>3. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Buddha become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554a15'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td class='ch' title='T125.2.554a15'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，為諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
     <td id='p4'>4. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554a18'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別之。」</td>
+    <td class='ch' title='T125.2.554a18'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別之。」</td>
     <td id='p5'>5. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
@@ -54,7 +54,7 @@ next: EA_03_02.html
     <td id='p9'>9. “The Tathāgata’s body of wisdom was a knowledge without limit or impediment. The Tathāgata’s body had accomplished liberation, had reached the end of destinations, and no longer would decide: ‘I will fall into birth and death again.’ The Tathāgata’s body had reached knowing and seeing the city [of <em>nirvāṇa</em>]. He knew whether other people had the capacity to be liberated or not. ‘Here they die, and there they’re born. Round they turn, reborn until the end of birth and death.’ He fully knew who was liberated and who wasn’t.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554b4'>「是謂修行念佛便有名譽，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td class='ch' title='T125.2.554b4'>「是謂修行念佛便有名譽，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
     <td id='p10'>10. “This is how someone who cultivates the recollection of the Buddha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
@@ -73,7 +73,7 @@ next: EA_03_02.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0554a07" target="_blank">T125.2.554a7-b10</a>. This <em>sūtra</em> is an expanded explanation of <a href="../02/EA_02_01.html" target="_blank">EĀ 2.1</a>. This pattern holds true for the remainder of the chapter as well. The commentary to the Chinese translation says that EĀ 2.1-10 were taught to intelligent disciples, and EĀ 3.1-10 were taught to dull-witted disciples. It would make sense that this may have happened during the Buddha’s life; i.e., that students who already understood a teaching would need only a reference to it, while new students would require a full explanation. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>become well known … unconditioned state.</em> This passage has been added to the introduction found in Chapter 2. The commentary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T25n1507_p0037b09" target="_blank">T1507.25.37b9-12</a>) associates these five attainments with rewards in the afterlife: “Well known” (名譽) refers to becoming a noble wheel-turning king, “great reward” (大果報) refers to birth as the god Śakra, “all good and complete attainments” (諸善普至) refers to birth in the Brahma Heaven (presumably as a result of mastering meditation), “the sweet-tasting nectar” (甘露味) refers to becoming a <em>pratyeka buddha</em>, and “the unconditioned state” (無爲處) refers to the fruit of the <em>arhat</em>.</p>
+<li id="n2"><p><em>become well known … unconditioned state.</em> This passage has been added to the introduction found in Chapter 2. The commentary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T25n1507_p0037b09" target="_blank">T1507.25.37b9-12</a>) associates these five attainments with rewards in the afterlife: “Well known” (名譽) refers to becoming a noble wheel-turning king, “great reward” (大果報) refers to birth as the god Śakra, “all good and complete attainments” (諸善普至) refers to birth in the Brahma Heaven (presumably as a result of mastering meditation), “the sweet-tasting nectar” (甘露味) refers to becoming a <em>pratyeka buddha</em>, and “the unconditioned state” (無為處) refers to the fruit of the <em>arhat</em>.</p>
 <p><em>sweet dew</em>. C. 甘露, S. <em>amṛta</em>, P. <em>amata</em>. The Indic refers to a special liquid or juice that gave the gods their immortality when they consumed it. It was equivalent to the <em>ambrosia</em> that Greek gods ate. In both cases, the words lit. mean “immortality,” (i.e., deathless or undying). C. translators used a native motif about a “sweet dew” thought to bring bounty, peace, and happiness to the land when it fell as rain from heaven. When 甘露 occurs in Chinese Buddhist texts, it describes S. <em>amṛta</em> with a concept familiar to the Chinese audience at the time. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p>Compare this visualization with the description found in <a href="suttacentral.net/an6.10" target="_blank">AN 6.10</a>. While both exercises use the Buddha’s exalted example as an object of practice, the one in AN is an insight meditation, while this description appears to be a <em>samādhi</em> practice. It’s similar to the visualization practices that developed among Mahāyāna Buddhists, e.g. <cite>The Visualization of the Buddha Amitāyus Sūtra</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T12n0365_f001" target="_blank">T365</a>). Perhaps those practices were inspired by existing <em>samādhi</em> practices that visualized an idealized Buddha Śākyamuni. [<a href="#ref3">back</a>]</p></li>
 </ol>
