--- a/01_agama/ekottarika/08/EA_08_01.md
+++ b/01_agama/ekottarika/08/EA_08_01.md
@@ -26,7 +26,7 @@ next: EA_08_02.html
     <td id='p3'>3. “When they see him, the kings of the sun and moon both feel frightened and insecure in their own places. For what reason? Because the <em>asura</em> king has a terrible form, the kings of the sun and moon stop shining out of fear.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.560c13'>「然，阿須倫不敢前捉日、月。 何以故？ 日、月威徳，有大神力、壽命極長、顏色端正，受樂無窮。 欲知壽命長短者，住壽一劫。 復，是此間眾生福祐令日、月王。 不爲阿須倫所見觸惱，爾時阿須倫便懷愁憂，即於彼沒。</td>
+    <td class='ch' title='T125.2.560c13'>「然，阿須倫不敢前捉日、月。 何以故？ 日、月威徳，有大神力、壽命極長、顏色端正，受樂無窮。 欲知壽命長短者，住壽一劫。 復，是此間眾生福祐令日、月王。 不為阿須倫所見觸惱，爾時阿須倫便懷愁憂，即於彼沒。</td>
     <td id='p4'>4. “But the <em>asura</em> king doesn’t dare grab the sun or moon. Why is that? The sun and moon are majestic, possess great miraculous powers, have very long life spans, are handsome in appearance, and enjoy pleasures without end. For those who want to know the length of their life spans: They live for one eon. Again, sentient beings who create good fortunes here become the kings of the sun and moon. They cannot be attacked by that <em>asura</em>, but the <em>asura</em> does make them feel distressed at that point, and then they disappear.</td>
   </tr>
   <tr>
@@ -38,7 +38,7 @@ next: EA_08_02.html
     <td id='p6'>6. “Although a monk sees these marvelous things of the six senses, his mind isn’t defiled by them. Deceitful Māra the Wicked One then feels distressed, retreats, and goes away. What’s the reason? It’s the work of the Tathāgata’s, the Arhat’s, majestic power. And why? Monks won’t go near sights, sounds, odors, flavors, and touches.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.560c26'>「爾時，比丘恒作是學，受人信施極爲甚難。 不可消化墮墜五趣，不得至無上、正真之道。 要當專意未獲者獲，未得者得，未度者度，未得證者教令成證。</td>
+    <td class='ch' title='T125.2.560c26'>「爾時，比丘恒作是學，受人信施極為甚難。 不可消化墮墜五趣，不得至無上、正真之道。 要當專意未獲者獲，未得者得，未度者度，未得證者教令成證。</td>
     <td id='p7'>7. “Monks then who always perform this training when accepting people’s faithful gifts are extraordinarily rare. Those who cannot digest their alms<sup id="ref3"><a href="#n3">3</a></sup> will fall to the five destinations and won’t attain the unsurpassed and true awakening. It’s imperative that they focus on obtaining what they’ve yet to obtain, attaining what they’ve yet to attain, crossing over what they’ve yet to cross, and accomplishing realization of those teachings that they’ve yet to realize.</td>
   </tr>
   <tr>
