--- a/01_agama/ekottarika/08/EA_08_02.md
+++ b/01_agama/ekottarika/08/EA_08_02.md
@@ -18,7 +18,7 @@ next: EA_08_03.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561a9'>爾時，世尊告諸比丘： 「若有一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。</td>
+    <td class='ch' title='T125.2.561a9'>爾時，世尊告諸比丘： 「若有一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，多饒益人，安隱眾生，愍世群萌，欲使天人獲其福祐。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world to benefit many people and bring well-being to sentient beings out of compassion for the world’s multitudes and the desire for gods and humans to obtain their good fortunes.</td>
   </tr>
   <tr>
