--- a/01_agama/ekottarika/08/EA_08_03.md
+++ b/01_agama/ekottarika/08/EA_08_03.md
@@ -18,7 +18,7 @@ next: EA_08_04.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561a18'>爾時，世尊告諸比丘： 「若有一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。是謂一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。</td>
+    <td class='ch' title='T125.2.561a18'>爾時，世尊告諸比丘： 「若有一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。是謂一人出現於世，便有一入道在於世間 ⋯亦有二諦⋯三解脫門⋯四諦真法⋯五根⋯六邪見滅⋯七覺意⋯賢聖八道品⋯九眾生居⋯如來十力⋯十一慈心解脫，便出現於世。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, the single-entry path<sup id="ref2"><a href="#n2">2</a></sup> arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindnesss<sup id="ref3"><a href="#n3">3</a></sup> arise in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the single-entry path arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness arise in the world.</td>
   </tr>
   <tr>
