--- a/01_agama/ekottarika/08/EA_08_04.md
+++ b/01_agama/ekottarika/08/EA_08_04.md
@@ -18,7 +18,7 @@ next: EA_08_05.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561b2'>爾時，世尊告諸比丘： 「若有一人出現於世，便有智慧光明出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，便有智慧光明出現於世。</td>
+    <td class='ch' title='T125.2.561b2'>爾時，世尊告諸比丘： 「若有一人出現於世，便有智慧光明出現於世。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，便有智慧光明出現於世。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one person appears in the world, then the light of wisdom appears in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the light of wisdom appears in the world.</td>
   </tr>
   <tr>
