--- a/01_agama/ekottarika/08/EA_08_05.md
+++ b/01_agama/ekottarika/08/EA_08_05.md
@@ -18,7 +18,7 @@ next: EA_08_06.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561b10'>爾時世尊告諸比丘： 「若有一人出現於世，無明大冥便自消滅。 爾時，凡愚之士爲此無明所見纒結。 生死所趣如實不知，周旋往來今世後世。 從劫至劫無有解已，若多薩阿竭、阿羅呵、三耶三佛出現世時，無明大闇便自消滅。</td>
+    <td class='ch' title='T125.2.561b10'>爾時世尊告諸比丘： 「若有一人出現於世，無明大冥便自消滅。 爾時，凡愚之士為此無明所見纒結。 生死所趣如實不知，周旋往來今世後世。 從劫至劫無有解已，若多薩阿竭、阿羅呵、三耶三佛出現世時，無明大闇便自消滅。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world and destroys the great darkness of ignorance himself. At the time, ordinary deluded men are bound up by this ignorance. They don’t truly know the destinations of birth and death, and they cycle through present and later lives. Having gone from eon to eon without understanding, the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One appears in the world and destroys the great darkness of ignorance himself.</td>
   </tr>
   <tr>
