--- a/01_agama/ekottarika/08/EA_08_06.md
+++ b/01_agama/ekottarika/08/EA_08_06.md
@@ -18,7 +18,7 @@ next: EA_08_07.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561b19'>爾時，世尊告諸比丘： 「若有一人出現於世，便有三十七品出現於世。 云何三十七品道？ 所謂四意止、四意斷、四神足、五根、五力、七覺意、八真行，便出現於世。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。</td>
+    <td class='ch' title='T125.2.561b19'>爾時，世尊告諸比丘： 「若有一人出現於世，便有三十七品出現於世。 云何三十七品道？ 所謂四意止、四意斷、四神足、五根、五力、七覺意、八真行，便出現於世。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks: “When one person appears in the world, the thirty-seven factors of the path appear in the world. What are the thirty-seven factors of the path? It’s the four abodes of mindfulness,<sup id="ref2"><a href="#n2">2</a></sup> four mental abandonments,<sup id="ref3"><a href="#n3">3</a></sup> four spiritual abilities, five faculties, five powers, seven factors of awakening,and eight true practices<sup id="ref4"><a href="#n4">4</a></sup> that then appear in the world. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One.</td>
   </tr>
   <tr>
