--- a/01_agama/ekottarika/08/EA_08_07.md
+++ b/01_agama/ekottarika/08/EA_08_07.md
@@ -18,7 +18,7 @@ next: EA_08_08.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561b27'>爾時，世尊告諸比丘： 「若有一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 所以然者？ 若多薩阿竭於世滅盡，三十七品亦復滅盡。</td>
+    <td class='ch' title='T125.2.561b27'>爾時，世尊告諸比丘： 「若有一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人沒盡於世，人民之類多懷愁憂。 天及人民普失廕覆。 所以然者？ 若多薩阿竭於世滅盡，三十七品亦復滅盡。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks: “There’s one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Who is that one person? He is called the Tathāgata, the Arhat, and the Correctly and Perfectly Awakened One. He is known as the one person whose disappearance from the world makes all sorts of people feel anguished. Gods and humans everywhere are lost in darkness then. Why is that? When the Tathāgata disappears from the world, the thirty-seven factors of the path disappear.</td>
   </tr>
   <tr>
