--- a/01_agama/ekottarika/08/EA_08_10.md
+++ b/01_agama/ekottarika/08/EA_08_10.md
@@ -18,7 +18,7 @@ next: ../09/EA_09_01.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.561c25'>爾時，世尊告諸比丘： 「若有一人出現於世，無與等者，不可摸則，獨歩無侶，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧無能及者。 云何爲一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，無與等者，不可摸則，獨歩無伴，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧皆悉具足。</td>
+    <td class='ch' title='T125.2.561c25'>爾時，世尊告諸比丘： 「若有一人出現於世，無與等者，不可摸則，獨歩無侶，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧無能及者。 云何為一人？ 所謂多薩阿竭、阿羅呵、三耶三佛。 是謂一人出現於世，無與等者，不可摸則，獨歩無伴，無有儔匹。 諸天人民無能及者，信、戒、聞、施、智慧皆悉具足。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There’s one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, nor does their belief, precepts, learning, generosity, or wisdom compare to his. Who is that one person? He’s called be the Tathāgata, Arhat, and Correctly and Perfectly Awakened One. He is known as the one person who appears in the world who’s unmatched by others, who can’t be imitated, who walks alone without a companion, and who has no peer. None among gods and humans can compare to him, for his belief, precepts, learning, generosity, and wisdom are all complete.</td>
   </tr>
   <tr>
