--- a/01_agama/ekottarika/12/EA_12_10.md
+++ b/01_agama/ekottarika/12/EA_12_10.md
@@ -40,7 +40,7 @@ And then fell back down to a slaughterhouse.”
 
 ### Notes
 
-1. {:#n1} <em>a serious thing, not an easy thing</em>. C. 甚爲不易. The previous <em>sutra</em> has the same opening line, which reads 甚<strong>重</strong>、不易. I’ve corrected this passage assuming a copyist has replaced 重 with 爲. [\[back\]](#ref1)
+1. {:#n1} <em>a serious thing, not an easy thing</em>. C. 甚為不易. The previous <em>sutra</em> has the same opening line, which reads 甚<strong>重</strong>、不易. I’ve corrected this passage assuming a copyist has replaced 重 with 為. [\[back\]](#ref1)
 2. {:#n2} <em>Śrīla</em>. C. 師利羅 (EMC. ṣïi-lɪi-la = G. <em>śirila</em> = S. <em>śrīla</em>). This personal name is attested in G. sources, but the particular figure being referenced here is thus far unknown to me. [\[back\]](#ref2)
 3. {:#n3} <em>a serious thing, not an easy thing</em>. The same correction applies here as in the opening of the <em>sūtra</em>. I’ve also ignored the spurious insertion of “Thus, monks, you should train yourselves” that occurs at this point. [\[back\]](#ref3)
 
