--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -54,11 +54,11 @@ next: MA_003.html
   <td class='subheading'>The Seasons of the Noble Disciple</td>
 </tr>
   <tr>
-    <td class='ch' title='t26.1.422b6'>「如是義，聖弟子亦復爾。 思念出家，是時聖弟子名爲『葉黄』。 猶三十三天晝度樹葉萎黄也。</td>
+    <td class='ch' title='t26.1.422b6'>「如是義，聖弟子亦復爾。 思念出家，是時聖弟子名為『葉黄』。 猶三十三天晝度樹葉萎黄也。</td>
     <td id='p9'>9. “The meaning of the noble disciple is like this, too. When they consider leaving home, the disciple is called ‘leaves turning yellow.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when its leaves turn yellow.</td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.422b8'>「復次，聖弟子剃除鬚髮，著袈裟衣，至信，捨家，無家，學道。是時，聖弟子名爲『葉落』。 猶三十三天晝度樹葉落也。</td>
+    <td class='ch' title='t26.1.422b8'>「復次，聖弟子剃除鬚髮，著袈裟衣，至信，捨家，無家，學道。是時，聖弟子名為『葉落』。 猶三十三天晝度樹葉落也。</td>
     <td id='p10'>10. “Furthermore, when they shave off their hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness,<sup id="ref7"><a href="#n7">7</a></sup> then the noble disciple is called ‘falling leaves.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when it drops its leaves.</td>
   </tr>
   <tr>
@@ -66,7 +66,7 @@ next: MA_003.html
     <td id='p11'>11. “Furthermore, the noble disciple is secluded from desires and secluded from bad and unskillful things. While they notice and examine things, this seclusion produces joy and happiness in them, and they accomplish and dwell in the first meditation.<sup id="ref8"><a href="#n8">8</a></sup> The noble disciple then is called ‘growing back leaves.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when it grows back its leaves.</td>
   </tr>
   <tr>
-    <td class='ch' title='t26.1.422b14'>「復次，聖弟子覺、觀已息，内靜、一心。 無覺、無觀，定生喜樂，得第二禪成就遊。 是時聖弟子名爲『生網』。 猶三十三天晝度樹生網也。</td>
+    <td class='ch' title='t26.1.422b14'>「復次，聖弟子覺、觀已息，内靜、一心。 無覺、無觀，定生喜樂，得第二禪成就遊。 是時聖弟子名為『生網』。 猶三十三天晝度樹生網也。</td>
     <td id='p12'>12. “Furthermore, once noticing and examining things has subsided, the noble disciple has inner calm and a unified mind. Without noticing or examining things, this <em>samādhi</em> produces joy and happiness, and they accomplish and dwell in the second meditation.<sup id="ref9"><a href="#n9">9</a></sup> The noble disciple then is called ‘growing a web of buds.’ They’re like the Trāyastriṃśa Heaven’s <em>pārijāta</em> tree when it grows a web of buds.</td>
   </tr>
   <tr>
@@ -86,7 +86,7 @@ next: MA_003.html
   <td class='subheading'>Conclusion</td>
 </tr>
   <tr>
-    <td class='ch' title='t26.1.422b28'>「彼爲漏盡阿羅訶比丘。 三十三天集在善法正殿，咨嗟、稱歎： 『某尊弟子於某村邑剃除鬚髮，著袈裟衣，至信捨家，無家學道。 諸漏已盡，心解脱、慧解脱。 於現法中，自知、自覺自作證成就遊。 「生已盡，梵行已立，所作已辦。 不更受有，知如眞。」』</td>
+    <td class='ch' title='t26.1.422b28'>「彼為漏盡阿羅訶比丘。 三十三天集在善法正殿，咨嗟、稱歎： 『某尊弟子於某村邑剃除鬚髮，著袈裟衣，至信捨家，無家學道。 諸漏已盡，心解脱、慧解脱。 於現法中，自知、自覺自作證成就遊。 「生已盡，梵行已立，所作已辦。 不更受有，知如眞。」』</td>
     <td id='p16'>16. “He becomes an <em>arhat</em><sup id="ref13"><a href="#n13">13</a></sup> monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Meeting Hall, sighing admiringly and praising them, ‘Some worthy disciple at some town shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Once their contaminants were ended, their mind was liberated, and their wisdom was liberated. In the present life, they accomplished and dwelt in their own knowledge, awakening, and direct experience. They truly know: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’</td>
   </tr>
   <tr>
