--- a/01_agama/ekottarika/02/EA_02_09.md
+++ b/01_agama/ekottarika/02/EA_02_09.md
@@ -18,7 +18,7 @@ next: EA_02_10.html
     <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.553b16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念身非常。 當善修行，當廣演布。 便成神通，去眾亂想，得沙門果，自致涅槃。</td>
+    <td class='ch' title='T125.2.553b16'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念身非常。 當善修行，當廣演布。 便成神通，去眾亂想，得沙門果，自致涅槃。</td>
     <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s that one thing? It’s called recollecting the body.<sup id="ref2"><a href="#n2">2</a></sup> One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
