--- a/01_agama/ekottarika/03/EA_03_03.md
+++ b/01_agama/ekottarika/03/EA_03_03.md
@@ -18,19 +18,19 @@ next: EA_03_04.html
     <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554c7'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大功徳、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念僧。」</td>
+    <td class='ch' title='T125.2.554c7'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大功徳、諸善普至。 得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念僧。」</td>
     <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward<sup id="ref2"><a href="#n2">2</a></sup> and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting the <em>saṅgha</em>.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554c11'>佛告諸比丘： 「云何修行念僧便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td class='ch' title='T125.2.554c11'>佛告諸比丘： 「云何修行念僧便有名譽，成大果報、諸善普至，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
     <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of the <em>saṅgha</em> become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554c14'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，爲諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
+    <td class='ch' title='T125.2.554c14'>爾時，諸比丘白世尊曰： 「諸法之本如來所説。 唯願，世尊，為諸比丘説此妙義。 諸比丘從如來聞已，便當受持。」</td>
     <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554c17'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td class='ch' title='T125.2.554c17'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別説。」</td>
     <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: EA_03_04.html
     <td>“‘Noble assembly’ means the four pairs and eight ranks of people.<sup id="ref3"><a href="#n3">3</a></sup> They are called the Tathāgata’s noble assembly who ought to be respected, served, and paid homage. For what reason? Because they are the world’s field of merit. Those among these assemblies are one and the same vessel, and they liberate other people by liberating themselves with the path of three vehicles. Those who do this work are called the ‘noble assembly.’</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.554c27'>「是謂，諸比丘，若念僧者便有名譽，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。</td>
+    <td class='ch' title='T125.2.554c27'>「是謂，諸比丘，若念僧者便有名譽，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。</td>
     <td>“This, monks, is how someone who cultivates the recollection of the <em>saṅgha</em> will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
