--- a/01_agama/ekottarika/03/EA_03_10.md
+++ b/01_agama/ekottarika/03/EA_03_10.md
@@ -18,19 +18,19 @@ next: ../08/EA_08_01.html
     <td>Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.556c14'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無爲處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何爲一法？ 所謂念死。」</td>
+    <td class='ch' title='T125.2.556c14'>爾時，世尊告諸比丘： 「當修行一法，當廣布一法。 修行一法已，便有名譽，成大果報、諸善普至。 得甘露味，至無為處。 便成神通，除諸亂想，逮沙門果，自致涅槃。 云何為一法？ 所謂念死。」</td>
     <td>It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves. What’s this one thing? It’s called recollecting death.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.556c18'>佛告諸比丘： 「云何修行念死便有名譽，成大果報、諸善普至，得甘露味，至無爲處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
+    <td class='ch' title='T125.2.556c18'>佛告諸比丘： 「云何修行念死便有名譽，成大果報、諸善普至，得甘露味，至無為處？ 便成神通，除諸亂想，獲沙門果，自致涅槃？」</td>
     <td>The Buddha addressed the monks, “How does someone who cultivates the recollection of death become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves?”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.556c21'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，爲諸比丘説此妙法。 諸比丘從如來聞法已，便當受持。」</td>
+    <td class='ch' title='T125.2.556c21'>爾時，諸比丘白世尊曰： 「諸法之本如來所宣。 唯願，世尊，為諸比丘説此妙法。 諸比丘從如來聞法已，便當受持。」</td>
     <td>The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.556c24'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當爲汝廣分別説。」</td>
+    <td class='ch' title='T125.2.556c24'>爾時，世尊告諸比丘： 「諦聽！諦聽，善思念之！ 吾當為汝廣分別説。」</td>
     <td>The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”</td>
   </tr>
   <tr>
@@ -46,7 +46,7 @@ next: ../08/EA_08_01.html
     <td>“‘Death’ means disappearing here and being born there, rebirth among the destinies, life departing and being unstable, and the limbs crumbling like rotten wood. The life faculty comes to an end, and one leaves tribe and clan without shape, echo, or appearance.</td>
   </tr>
   <tr>
-    <td class='ch' title='T125.2.557a1'>「如是，諸比丘，名曰念死。便得具足，成大果報、諸善普至，得甘露味，至無爲處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
+    <td class='ch' title='T125.2.557a1'>「如是，諸比丘，名曰念死。便得具足，成大果報、諸善普至，得甘露味，至無為處。 便成神通，除諸亂想，獲沙門果，自致涅槃。</td>
     <td>“This is how someone who cultivates the recollection of death will become well known,<sup id="ref2"><a href="#n2">2</a></sup> achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about <em>nirvāṇa</em> themselves.</td>
   </tr>
   <tr>
