--- a/01_agama/samyukta/01/SA1_21.md
+++ b/01_agama/samyukta/01/SA1_21.md
@@ -18,11 +18,11 @@ next: SA1_22.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a7'>爾時，有異比丘來詣佛所。 稽首佛足，却住一面。 白佛言： 「善哉，世尊！今當爲我略説法要。 我聞法已，當獨一靜處，修不放逸。 修不放逸已，當復思惟： 『所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家。 爲究竟無上梵行。 現法作證： 「我生已盡，梵行已立，所作已作。 自知不受後有。」』」</td>
+    <td class="ch" title='t99.2.3a7'>爾時，有異比丘來詣佛所。 稽首佛足，却住一面。 白佛言： 「善哉，世尊！今當為我略説法要。 我聞法已，當獨一靜處，修不放逸。 修不放逸已，當復思惟： 『所以善男子出家，剃除鬚髮，身著法服，信家，非家，出家。 為究竟無上梵行。 現法作證： 「我生已盡，梵行已立，所作已作。 自知不受後有。」』」</td>
     <td id='p2'>2. At the time, a certain monk came to the Buddha. He bowed his head at the Buddha’s feet, and withdrew to stand to one side. He then said, “It’d be good, Bhagavān, if you would briefly explain the Dharma for me now. After hearing the Dharma, I’ll go alone to a quiet place and cultivate it earnestly. After cultivating it earnestly, I’ll again contemplate: ‘A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home [to train on the path]. That’s the way he reaches the ultimate and unsurpassed religious life. He’ll realize in the present life: “My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a13'>爾時，世尊告彼比丘： 「善哉，善哉！比丘，快説此言： 『云當爲我略説法要？ 我聞法已，獨一靜處修不放逸⋯乃至⋯ 「自知不受後有。」』 如是説耶？」</td>
+    <td class="ch" title='t99.2.3a13'>爾時，世尊告彼比丘： 「善哉，善哉！比丘，快説此言： 『云當為我略説法要？ 我聞法已，獨一靜處修不放逸⋯乃至⋯ 「自知不受後有。」』 如是説耶？」</td>
     <td id='p3'>3. The Bhagavān told that monk, “Good, good! Monk, I’m glad you’ve said, ‘[Bhagavān,] give me a brief explanation of the Dharma. From that brief explanation of the Dharma, I will get a full understanding of its meaning. I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ Is this what you said?”</td>
   </tr>
   <tr>
@@ -30,7 +30,7 @@ next: SA1_22.html
     <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a17'>佛告比丘： 「諦聽，諦聽！善思念之。 當爲汝説。 比丘，若隨使使者，即隨使死。 若隨死者，爲取所縛。 比丘，若不隨使使，則不隨使死。 不隨使死者，則於取解脱。」</td>
+    <td class="ch" title='t99.2.3a17'>佛告比丘： 「諦聽，諦聽！善思念之。 當為汝説。 比丘，若隨使使者，即隨使死。 若隨死者，為取所縛。 比丘，若不隨使使，則不隨使死。 不隨使死者，則於取解脱。」</td>
     <td id='p4'>4. The Buddha told the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if something brings about the tendencies, then it brings about death.<sup id="ref2"><a href="#n2">2</a></sup> If something brings about death, then it’s bound by grasping. Monk, if it doesn’t bring about the tendencies, then it won’t bring about death. If something doesn’t bring about death, then it’s freed from grasping.”</td>
   </tr>
   <tr>
@@ -42,7 +42,7 @@ next: SA1_22.html
     <td id='p5'>5. The Buddha asked the monk, “How do you understand the meaning of my brief explanation of the Dharma in full?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3a22'>比丘白佛言： 「世尊，色隨使使，色隨使死。 隨使使隨使死者則爲取所縛。 如是，受⋯想⋯行⋯識隨使使隨使死。 隨使使隨使死者，爲取所縛。</td>
+    <td class="ch" title='t99.2.3a22'>比丘白佛言： 「世尊，色隨使使，色隨使死。 隨使使隨使死者則為取所縛。 如是，受⋯想⋯行⋯識隨使使隨使死。 隨使使隨使死者，為取所縛。</td>
     <td id='p6'>6. The monk said to the Buddha, “Bhagavān, form brings about the tendencies, and form brings about death. Something that brings about the tendencies and death is bound by grasping. Thus, feeling … conception … volition … awareness brings about the tendencies, and awareness brings about death. Something that brings about the tendencies and brings about death is bound by grasping.</td>
   </tr>
   <tr>
@@ -50,7 +50,7 @@ next: SA1_22.html
     <td id='p7'>7. “Bhagavān, if form doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. Thus, if feeling … conception … volition … awareness doesn’t bring about the tendencies, it won’t bring about death. Something that doesn’t bring about the tendencies and doesn’t bring about death is freed from grasping. I understand the Bhagavān’s brief explanation of the Dharma in this way.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.3b1'>佛告比丘： 「善哉！善哉，比丘，於我略説法中廣解其義。 所以者何？ 色隨使使，隨使死。 隨使使隨使死者，則爲取所縛。 如是，受⋯想⋯行⋯識隨使使，隨使死。 隨使使隨使死者，則爲取所縛。</td>
+    <td class="ch" title='t99.2.3b1'>佛告比丘： 「善哉！善哉，比丘，於我略説法中廣解其義。 所以者何？ 色隨使使，隨使死。 隨使使隨使死者，則為取所縛。 如是，受⋯想⋯行⋯識隨使使，隨使死。 隨使使隨使死者，則為取所縛。</td>
     <td id='p8'>8. The Buddha told the monk, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? If form brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping. Thus, if feeling … conception … volition … awareness brings about the tendencies, it brings about death. Something that brings about the tendencies and brings about death is bound by grasping.</td>
   </tr>
   <tr>
